Fixed cursor bug causing overflow

--- a/src/scss/components/_cursor.scss
+++ b/src/scss/components/_cursor.scss
@@ -63,3 +63,9 @@
     }
   }
 }
+
+@media screen and(max-width: $screen-sm-min) {
+  .cursor {
+    display: none;
+  }
+}
